<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimplepushDemoApp</string>
    <string name="app_path">com.mozilla.simplepush.simplepushdemoapp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="no_content">Not connected to server</string>
    <string name="app_title">SimplePush Demo App</string>
    <string name="push_host">http://192.168.57.20:8082/register</string>
    <string name="push_host_title">Push Host:</string>
    <string name="host_connect">Connect</string>
    <string name="test_message">Message to send</string>

</resources>
